[gd_scene load_steps=26 format=3 uid="uid://bnevv0vtyx4c8"]

[ext_resource type="Script" path="res://scenes/enemies/otyugh/otyugh.gd" id="1_vjne1"]
[ext_resource type="Texture2D" uid="uid://d3n1edjpl2oti" path="res://assets/enemies/bosses/otyugh-Sheet.png" id="2_5voo4"]
[ext_resource type="Script" path="res://scenes/player/states/state_machine.gd" id="3_7xoob"]
[ext_resource type="PackedScene" uid="uid://cgrg84ajjemmf" path="res://utilitites/components/velocity_component.tscn" id="3_sehyb"]
[ext_resource type="PackedScene" uid="uid://lge6t38xhjjm" path="res://utilitites/components/hurt_hit_box.tscn" id="4_0b8vi"]
[ext_resource type="Script" path="res://scenes/enemies/otyugh/idle_state.gd" id="4_y6sbu"]
[ext_resource type="PackedScene" uid="uid://dv0lxnync3vjn" path="res://utilitites/components/health_component.tscn" id="5_bumfo"]
[ext_resource type="Script" path="res://scenes/enemies/otyugh/follow_state.gd" id="6_abpqq"]
[ext_resource type="Script" path="res://scenes/enemies/otyugh/spit_attack.gd" id="7_bcrgu"]
[ext_resource type="Script" path="res://scenes/enemies/otyugh/death.gd" id="8_fetvr"]
[ext_resource type="Script" path="res://scenes/enemies/otyugh/spawn.gd" id="8_mr2ad"]
[ext_resource type="Script" path="res://scenes/enemies/otyugh/charge_attack.gd" id="10_ibs0n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckasc"]
size = Vector2(53, 8)

[sub_resource type="Animation" id="Animation_4cfwr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xqxyy"]
resource_name = "charge"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_b8qxb"]
resource_name = "death"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_uhb6w"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4kbd4"]
resource_name = "spit_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StateMachine/SpitAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_hr7vw"]
resource_name = "tentacle_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_x1tf2"]
resource_name = "spawn"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1rpmq"]
_data = {
"RESET": SubResource("Animation_4cfwr"),
"charge": SubResource("Animation_xqxyy"),
"death": SubResource("Animation_b8qxb"),
"idle": SubResource("Animation_uhb6w"),
"spawn": SubResource("Animation_x1tf2"),
"spit_attack": SubResource("Animation_4kbd4"),
"tentacle_attack": SubResource("Animation_hr7vw")
}

[sub_resource type="Animation" id="Animation_u4s3k"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oyjtj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ox8v7"]
_data = {
"RESET": SubResource("Animation_oyjtj"),
"spawn": SubResource("Animation_u4s3k")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_346j1"]
radius = 14.5
height = 43.0

[node name="Otyugh" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_vjne1")

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
position = Vector2(2, 15)
shape = SubResource("RectangleShape2D_ckasc")

[node name="Misc" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Misc"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_5voo4")
hframes = 12

[node name="Animator" type="AnimationPlayer" parent="Misc"]
libraries = {
"": SubResource("AnimationLibrary_1rpmq")
}
autoplay = "idle"

[node name="Animator2" type="AnimationPlayer" parent="Misc"]
libraries = {
"": SubResource("AnimationLibrary_ox8v7")
}

[node name="Components" type="Node2D" parent="."]

[node name="VelocityComponent" parent="Components" node_paths=PackedStringArray("actor") instance=ExtResource("3_sehyb")]
actor = NodePath("../..")
speed = 65.0
acceleration = 100.0
friction = 100.0

[node name="HurtHitBox" parent="Components" node_paths=PackedStringArray("health_component") instance=ExtResource("4_0b8vi")]
collision_layer = 4
collision_mask = 8
health_component = NodePath("../HealthComponent")

[node name="Collider" parent="Components/HurtHitBox" index="0"]
position = Vector2(3, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_346j1")

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("actor") instance=ExtResource("5_bumfo")]
actor = NodePath("../..")
max_health = 16.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_7xoob")
initial_state = NodePath("Spawn")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_y6sbu")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource("8_mr2ad")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("8_fetvr")

[node name="AnimationTimer" type="Timer" parent="StateMachine/Death"]
wait_time = 2.0
one_shot = true

[node name="Follow" type="Node" parent="StateMachine"]
script = ExtResource("6_abpqq")
spit_attack_range = 120.0

[node name="Cooldowns" type="Node" parent="StateMachine/Follow"]

[node name="SpitCooldown" type="Timer" parent="StateMachine/Follow/Cooldowns"]
wait_time = 2.0
one_shot = true

[node name="ChargeCooldown" type="Timer" parent="StateMachine/Follow/Cooldowns"]
wait_time = 7.0
one_shot = true

[node name="SpitAttack" type="Node" parent="StateMachine"]
script = ExtResource("7_bcrgu")

[node name="ChargeAttack" type="Node" parent="StateMachine"]
script = ExtResource("10_ibs0n")

[connection signal="handle_attack" from="Components/HealthComponent" to="." method="_on_health_component_handle_attack"]
[connection signal="timeout" from="StateMachine/Death/AnimationTimer" to="StateMachine/Death" method="_on_animation_timer_timeout"]

[editable path="Components/HurtHitBox"]
